--- a/newsletter-project/public/.htaccess
+++ b/newsletter-project/public/.htaccess
@@ -1,5 +1,8 @@
 <IfModule mod_rewrite.c>
+Options -Multiviews
 RewriteEngine On
-RewriteRule ^$ public/ [L]
-RewriteRule (.*) public/$1 [L]
+RewriteBase /newsletter-project/public
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
 </IfModule>
